--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Simple Portfolio</title>
+    <title>My Simple Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="shortcut icon" href="imgs/avatar.jpeg">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/ionicons.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
     <link href="assets/styles.css" rel="stylesheet">
 </head>
 
@@ -27,13 +26,12 @@
 
         <header>
             <div class="container">
-                <div class="heading-wrapper wow fadeInDown animated">
+                <div class="heading-wrapper">
                     <div class="row">
                         <div class="col-xl-4 col-lg-6 mb-md-0 mb-3">
                             <div class="info">
                                 <i class="icon ion-md-pin"></i>
                                 <div class="right-area">
-                                    <h5>El Maadi</h5>
                                     <h5>Cairo, Egypt</h5>
                                 </div>
                             </div>
@@ -52,17 +50,14 @@
                                 <i class="icon ion-md-chatboxes"></i>
                                 <div class="right-area">
                                     <h5 class='my-mail'><a href="mailto:mohamedelsayedhussein0@gmail.com">
-                                        mohamedelsayedhussein0@gmail.com
-                                    </a></h5>
+                                            mohamedelsayedhussein0@gmail.com
+                                        </a></h5>
                                     <h6>REPLY IN 24 HOURS</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="download-btn custom-btn wow fadeInRight animated" href="./Resume .pdf" target='_blank'>
-                    <span>Download CV</span>
-                </a>
             </div>
         </header>
 
@@ -73,20 +68,13 @@
                 <div class="row">
                     <div class="col-md-1 col-lg-2"></div>
                     <div class="col-md-10 col-lg-8">
-                        <div class="intro wow fadeInUp animated">
-                            <div class="profile-img wow fadeIn animated" data-wow-delay="0.3s"><img
-                                    src="imgs/avatar.jpeg" alt=""></div>
+                        <div class="intro">
+                            <div class="profile-img"><img src="imgs/avatar.jpeg" alt=""></div>
                             <div>
                                 <h1><b>Mohamed Elsayed</b></h1>
                                 <h4 class="font-blue">{ Front-end Developer }</h4>
-                                <hr style='width:150px;margin:.5rem auto 0'>
-                                <ul class="information my-5">
-                                    <li><b>BORN : </b>January 2, 1984</li>
-                                    <li><b>EMAIL : </b>mohamedelsayedhussein0@gmail.com</li>
-                                    <li><b>MARITAL STATUS : </b>Married</li>
-                                </ul>
                             </div>
-                            <ul class="social-icons">
+                            <ul class="social-icons mt-4">
                                 <li>
                                     <a href="https://www.pinterest.com/mohamedelsayedhussein0/" target="_blank">
                                         <i class="ion-logo-pinterest"></i>
@@ -140,7 +128,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://senergic-2.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Senergic 2_ HOME.avif");'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/Senergic 2_ HOME.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -148,7 +137,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://elshahed.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/El-shahed-Development-Home (1).avif");'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/El-shahed-Development-Home (1).avif");'>
                                 </div>
                             </a>
                         </div>
@@ -164,7 +154,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://foe.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/اثاث مصر _ الرئيسيه.avif");'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/اثاث مصر _ الرئيسيه.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -212,7 +203,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="http://kh.surge.sh/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Home _ KH Real Estate.avif");'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/Home _ KH Real Estate.avif");'>
                                 </div>
                             </a>
                         </div>
@@ -393,13 +385,13 @@
         <section class="about-section section">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 wow fadeInLeft animated" data-wow-delay="0.2s">
+                    <div class="col-sm-4">
                         <div class="heading">
                             <h3 class='text-white'><b>About me</b></h3>
                             <h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
                         </div>
                     </div>
-                    <div class="col-sm-8 wow fadeInRight animated" data-wow-delay="0.2s">
+                    <div class="col-sm-8">
                         <h3 class="mb-3 text-white">I’m a web designer and front-end web developer with over 5 years of
                             professional experience in the design industry.</h3>
                         <p class="mb-3">There is no simple rules when building a successful website. However by being
@@ -410,29 +402,25 @@
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
-                                        data-percent="90">90%</div>
+                                    <div class="chart text-white" data-percent="90">90%</div>
                                     <h6 class="label mt-3 text-white">HTML &amp; CSS</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
-                                        data-percent="75">75%</div>
+                                    <div class="chart text-white" data-percent="75">75%</div>
                                     <h6 class="label text-white mt-3">JAVASCRIPT</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
-                                        data-percent="85">85%</div>
+                                    <div class="chart text-white" data-percent="85">85%</div>
                                     <h6 class="label text-white mt-3">ANIMATION</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
-                                        data-percent="80">80%</div>
+                                    <div class="chart text-white" data-percent="80">80%</div>
                                     <h6 class="label text-white mt-3">WEB DESIGN</h6>
                                 </div>
                             </div>
@@ -448,8 +436,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
-                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
+                        <div class="counter">
+                            <div class="img">
                                 <img class='img-fluid' src="imgs/degree.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -460,8 +448,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
-                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
+                        <div class="counter">
+                            <div class="img">
                                 <img class='img-fluid' src="imgs/w-hours.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -472,8 +460,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
-                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
+                        <div class="counter">
+                            <div class="img">
                                 <img class='img-fluid' src="imgs/smile.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -484,8 +472,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
-                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
+                        <div class="counter">
+                            <div class="img">
                                 <img class='img-fluid' src="imgs/cup.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -544,7 +532,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://rendro.github.io/easy-pie-chart/javascripts/jquery.easy-pie-chart.js"></script>
         <script src="js/numscroller-1.0.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
         <script src="js/custom.js"></script>
     </body>
 </body>
