--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <div class="col-md-1 col-lg-2"></div>
                     <div class="col-md-10 col-lg-8">
                         <div class="intro">
-                            <div class="profile-img"><img src="imgs/avatar.jpeg" alt=""></div>
+                            <div class="profile-img"><img src="imgs/avatar.jpg" alt=""></div>
                             <div>
                                 <h1><b>Mohamed Elsayed</b></h1>
-                                <h4 class="font-blue">{ Front-end Developer }</h4>
+                                <h4 class="font-blue"> &lt; Front-end Developer /&gt;</h4>
                             </div>
                             <ul class="social-icons mt-4">
                                 <li>
