--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>My Simple Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" href="imgs/avatar.jpeg">
+    <link rel="shortcut icon" href="imgs/avatar.jpg">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/styles.css" rel="stylesheet">
 </head>
